# scrshot

./: CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt  scrshot.cpp  scrshot.h
